# rust-exercises

./: README.md
capnproto_example/: Cargo.toml  README.md  addressbook.capnp  build.rs
capnproto_example/src/: addressbook.rs
flatbuf_example/: Cargo.toml  README.md  monster_generated.rs
flatbuf_example/src/: main.rs
grpc_example/: Cargo.toml  README.md  build.rs
grpc_example/src/: lib.rs
grpc_example/src/protos/: helloworld.rs
protobuf_example/: Cargo.toml  README.md
protobuf_example/protos/: person.proto
protobuf_example/src/: main.rs
protobuf_example/src/protos/: person.rs
