[package]
name = "grpc-example"
version = "0.1.0"
authors = ["Mario Cao <mario@stampery.co>"]

[lib]
doctest = false
test = false

[dependencies]
protobuf        = "2"
futures         = "0.1.*"
futures-cpupool = "0.1.*"
tls-api            = "0.1.*"
tls-api-native-tls = "0.1.*"
httpbis         = "~0.7"
env_logger      = "0.4.*"
grpc = "0.5.0"

[build-dependencies]
protoc-rust-grpc = "0.5.0"

[[bin]]
name = "greeter_client"
test = false

[[bin]]
name = "greeter_server"
test = false
